# Prof_ecap

./: README.md  pyproject.toml
src/: main.py
src/config/: config.py  database.py  routes.py
src/config/security/: Security_jwt.py
src/controller/: Controller_aluno.py  Controller_token.py  Controller_turma.py
src/domains/Aluno/: Model_aluno.py
src/domains/Turma/: Model_turma.py
src/domains/User/: Model_adm.py
src/package/: constant.py
src/service/: Serivce_adm.py  Service_aluno.py  Service_jwt.py  Service_turma.py
